--- a/index.html
+++ b/index.html
@@ -3,9 +3,46 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Arcadia Zoo</title>
+    <title>ArcadiaZoo</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Anonymous+Pro&family=Comfortaa&family=Inika:wght@400;700&family=Lexend+Mega&family=Zen+Tokyo+Zoo&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
   </head>
-  <body></body>
+  <body>
+    <a href="#" class="admin">Admin</a>
+    <div class="login-form">
+      <form action="verificationAdmin.php" method="POST">
+        <input type="text" name="username" placeholder="Nom d'utilisateur" />
+        <input type="password" name="password" placeholder="Mot de passe" />
+        <button type="submit">Se connecter</button>
+      </form>
+    </div>
+    <header>
+      <div class="background-image"></div>
+      <div class="header-container">
+        <div class="logo">
+          <img src="logo/logoArcadia.png" alt="ArcadiaLogo" />
+        </div>
+        <nav>
+          <ul>
+            <li><a href="#">ACCUEIL</a></li>
+            <li><a href="#">Animaux et Habitats</a></li>
+            <li><a href="#">SERVICES</a></li>
+            <li><a href="#">CONTACT</a></li>
+          </ul>
+        </nav>
+      </div>
+    </header>
+  </body>
   <link rel="stylesheet" href="script.js" />
 </html>
